--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>To-Do List</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/app.js" defer></script>
 </head>
 <body class="bg-gray-100 font-sans">
-<div class="container mx-auto p-4">
+<div class="container mx-auto p-4 max-w-xl">
     <h1 class="text-3xl font-bold mb-4">To-Do List</h1>
-    <div class="mb-4">
-        <input type="text" id="taskTitle" placeholder="Task Title" class="border p-2 mr-2">
-        <input type="text" id="taskDescription" placeholder="Task Description" class="border p-2 mr-2">
+    <div class="mb-4 flex gap-2">
+        <input type="text" id="taskTitle" placeholder="Task Title" class="border p-2 flex-grow" />
+        <input type="text" id="taskDescription" placeholder="Task Description" class="border p-2 flex-grow" />
         <button onclick="addTask()" class="bg-blue-500 text-white p-2 rounded">Add Task</button>
     </div>
     <ul id="taskList" class="space-y-2"></ul>
